force-app/main/default/objects/Related_record_attributes__mdt/Related_record_attributes__mdt.object-meta.xml
<CustomObject>
    <label>Related record attributes</label>
    <pluralLabel>Related record attributes</pluralLabel>
</CustomObject>