force-app/main/default/objects/Related_record_attributes__mdt/fields/Column_label__c.field-meta.xml
<CustomField>
    <fullName>Column_label__c</fullName>
    <description>Label that&apos;s shown on column, can be either text or the API name of a Custom Label</description>
    <label>Column label</label>
    <length>180</length>
    <type>Text</type>
</CustomField>