force-app/main/default/objects/Related_record_attributes__mdt/fields/Icon_name__c.field-meta.xml
<CustomField>
    <fullName>Icon_name__c</fullName>
    <label>Icon name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>