force-app/main/default/objects/Related_record_attributes__mdt/fields/Id_api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Id_api_field_name__c</fullName>
    <label>Id api field name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>